<resources>
    <string name="app_name">NMedia</string>
    <string name="hello">NMedia!</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="description_share_menu">Share menu</string>
    <string name="description_post_like">Post like</string>
    <string name="description_post_views">Post views</string>
    <string name="menu_edit"> Edit</string>
    <string name="menu_remove">Remove</string>
    <string name="post_text">Post Text</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="description_post_save">Save</string>
    <string name="description_edit_cancel">Edit cancel</string>
    <string name="edit_message">Edit Message</string>
    <string name="chooser_share_post">Share post</string>
    <string name="add_post">Add post</string>
    <string name="playButton">Play video</string>
    <string name="google_play_unavailable">Google Api Unavailable</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name = "notification_new_post">User %1$s published new post:</string>
    <string name="error_loading">Error loading</string>
    <string name="retry_loading">Retry loading</string>
    <string name="empty_posts">Empty posts</string>
    <string name="newPosts">New posts</string>
    <string name="menu_save">Save</string>
    <string name="description_select_photo">Select photo</string>
    <string name="description_photo">Photo description</string>
    <string name="remove">Remove</string>
    <string name="description_take_photo">Take photo</string>
    <string name="pic">Picture</string>
</resources>