<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-173dp"
        tools:listitem="@layout/card_post" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/toolsTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        android:background="@android:color/white"
        app:constraint_referenced_ids="content,save" />

    <EditText
        android:id="@+id/content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:hint="@string/post_text"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:padding="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/toolsTop" />

    <ImageButton
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_spacing"
        android:background="@android:color/white"
        android:contentDescription="@string/description_post_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:srcCompat="@drawable/ic_save_48"
        />

    <EditText
        android:id="@+id/editedContent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:maxLines="3"
        android:background="@android:color/white"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"

        app:layout_constraintBottom_toTopOf="@+id/toolsTop"
        app:layout_constraintEnd_toStartOf="@id/cancel"
        app:layout_constraintStart_toEndOf="@id/pencil"
        app:layout_constraintTop_toTopOf="@id/toolsTop2"
        app:layout_constraintVertical_bias="1.0" />

    <ImageButton
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:contentDescription="@string/description_edit_cancel"
        app:layout_constraintBottom_toBottomOf="@id/toolsTop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/editedContent"
        app:srcCompat="@drawable/baseline_cancel_24" />

    <ImageButton
        android:id="@+id/pencil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@id/toolsTop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/editMessage"
        app:layout_constraintStart_toEndOf="parent"
        app:srcCompat="@drawable/pencil_fill" />

    <TextView
        android:id="@+id/editMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        app:layout_constraintStart_toEndOf="@id/pencil"
        app:layout_constraintEnd_toStartOf="@id/cancel"
        app:layout_constraintBottom_toTopOf="@id/editedContent"
        android:background="@android:color/white"
        android:text="@string/edit_message"
        />


    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/toolsTop2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        android:background="@android:color/white"
        app:constraint_referenced_ids="cancel, editedContent, pencil" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/undoEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:constraint_referenced_ids="cancel, editedContent,
        pencil, toolsTop2, editMessage" />

</androidx.constraintlayout.widget.ConstraintLayout>